Muchaas cosas tio, debería haber hecho commit mucho antes 😓

--- a/src/components/SuccessAlert.astro
+++ b/src/components/SuccessAlert.astro
@@ -32,10 +32,10 @@
     padding: 1rem;
 
     font-size: 0.875rem;
-    color: rgb(4, 206, 4); /* text-red-800 */
-    border: 1px solid #fca5a5; /* border-red-300 */
-    border-radius: 0.5rem; /* rounded-lg */
-    background-color: #fef2f2; /* bg-red-50 */
+    color: rgb(0, 196, 0); 
+    border: 1px solid rgb(0, 196, 0); 
+    border-radius: 0.5rem; 
+    background-color: #bebebe; 
   }
 
   .alert-container .icon {
