--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Subir Programa">
   <main id="UploadProgram">
     <h1>Agrega Tus Programas</h1>
-    <a href="/UploadTutorial">Comó subir correctamente un archivo</a>
+    <a href="/UploadTutorial">Ayuda & Documentación</a>
     <form id="programForm">
       <div class="input-group">
         <input
@@ -184,7 +184,7 @@ import Layout from "../layouts/Layout.astro";
     top: 1px;
     left: 1px;
     align-items: center;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     font-weight: bold;
     padding: 6px 14px;
     border-radius: 6px;
@@ -201,6 +201,7 @@ import Layout from "../layouts/Layout.astro";
     &:hover {
       box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
       text-decoration: underline;
+      text-decoration-thickness: 0.1em;
       cursor: pointer;
     }
   }
