--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,9 @@ import { ViewTransitions } from "astro:transitions";
       name="keywords"
       content="Software, Subir, Descargar, Donwload, Upload, Share"
     />
-    <!-- Logo - https://realfavicongenerator.net -->
+    <!-- Icono -->
+    <link rel="icon" href="/a5.ico" >
     <link rel="icon" href="/a5.svg" type="image/svg+xml" sizes="512x512">
-    <!-- End Logo -->
     <meta name="apple-mobile-web-app-title" content="Soft-Share page" />
     <link rel="manifest" href="/logo.png/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
