Seach botón de mayor tamaño

--- a/src/components/Search-btn.astro
+++ b/src/components/Search-btn.astro
@@ -50,6 +50,7 @@
 <style>
   .container {
     display: flex;
+    align-items: center;
   }
 
   input {
@@ -71,6 +72,13 @@
 
   .btn:hover {
     transform: scale(1.3);
+  }
+
+  img {
+    height: 2.5rem;
+  }
+  input {
+    height: 2.2rem;
   }
 
   .widthInput {
