agregando sección de comentarios.

--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -54,7 +54,6 @@ import Layout from "../layouts/Layout.astro";
     </form>
   </main>
 </Layout>
-<div class="hola"></div>
 
 <script type="module">
   // Definir variables para el acceso a la base de datos
@@ -206,15 +205,12 @@ import Layout from "../layouts/Layout.astro";
     }
   }
 
-  .hola {
-    height: 200px;
-  }
-
   main {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 100px;
   }
 
   * {
