--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -22,6 +22,7 @@ import SearchBtn from "./Search-btn.astro";
     "postgresql://Programs-db_owner:gt7QxJLNI4rP@ep-shrill-brook-a5j8odhx.us-east-2.aws.neon.tech/Programs-db?sslmode=require"
   );
 
+  // Función cargar programas llamada cada vez que la página se recargue
   LoadPrograms();
 
   document
