--- a/src/components/FeedBack.astro
+++ b/src/components/FeedBack.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
           id="autor"
           minlength="2"
           maxlength="20"
-          title="Ingresa el nombre de tu soft🚀 (hasta máximo 20 caracteres)"
+          title="Da la cara🤓"
           required
         />
         <label for="nombre">¿Quién eres?👀</label>
