--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,7 +78,7 @@ import { ViewTransitions } from "astro:transitions";
   /* Estilos de elementos principales */
 
   h1 {
-    font-size: 4.5rem;
+    font-size: 4.5em;
     align-self: center;
   }
   h2 {
