acaso por esto no consigue indexarse bien?

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import CommentsSection from "../components/CommentsSection.astro";
 import FeedBack from "../components/FeedBack.astro";
 ---
 
-<Layout title="Soft-Share - Repositorio de tus programas.">
+<Layout title="Soft-Share">
   <Alert />
   <SuccessAlert />
   <main>
