se alejan cositas

--- a/src/components/Search-btn.astro
+++ b/src/components/Search-btn.astro
@@ -31,7 +31,7 @@
     }
 
     // Agregar los event listeners
-    btnElement.addEventListener("mouseover", mouseOverHandler);
+    btnElement.addEventListener("click", mouseOverHandler);
     btnElement.addEventListener("mouseout", mouseOutHandler);
   }
 
@@ -71,7 +71,7 @@
   }
 
   .btn:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
   }
 
   img {
