--- a/src/pages/UploadTutorial.astro
+++ b/src/pages/UploadTutorial.astro
@@ -85,7 +85,7 @@ import Layout from "../layouts/Layout.astro";
         />
       </h3>
       <p>
-        Para crear una cuenta, necesitarás proporcionar tu nombre, apellido,
+        Para <font color="blue"><a href="https://app.mediafire.com/login" target="_blank">crear una cuenta</a></font>, necesitarás proporcionar tu nombre, apellido,
         correo electrónico y una contraseña. Si prefieres no usar tu correo
         personal, puedes optar por un <font color="blue"
           ><a href="https://temp-mail.io/" target="_blank">correo temporal</a
