--- a/src/components/FeedBack.astro
+++ b/src/components/FeedBack.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
           title="Da la cara🤓"
           required
         />
-        <label for="nombre">¿Quién eres?👀</label>
+        <label for="nombre">¿Quién eres? 👀</label>
       </div>
 
       <div class="input-group">
@@ -184,6 +184,10 @@ import Layout from "../layouts/Layout.astro";
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  input {
+    font-family: "geist", "sans serif";
+    font-variant-emoji:emoji;
   }
 
   .input-group {
