se alejan aún más las cositas

--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
           id="nombre"
           minlength="2"
           maxlength="20"
-          title="Ingresa el nombre de tu soft🚀 (hasta máximo 20 caracteres)"
+          title="Ingresa el nombre de tu soft🚀 (máximo 20 caracteres)"
           required
         />
         <label for="nombre">Nombre</label>
@@ -45,7 +45,7 @@ import Layout from "../layouts/Layout.astro";
           id="detalles"
           minlength="10"
           maxlength="80"
-          title="Ingresa los detalles de tu soft🚀 (hasta máximo 80 caracteres)"
+          title="Ingresa los detalles de tu soft🚀 (máximo 80 caracteres)"
           required
         />
         <label for="detalles">Detalles</label>
