--- a/src/components/FeedBack.astro
+++ b/src/components/FeedBack.astro
@@ -249,6 +249,7 @@ import Layout from "../layouts/Layout.astro";
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    border: 2px solid black;
     cursor: pointer;
     transition:
       transform,
