--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -85,7 +85,7 @@ import SearchBtn from "./Search-btn.astro";
                 onerror="this.onerror=null; this.src='https://s3.amazonaws.com/www-inside-design/uploads/2020/10/aspect-ratios-blogpost-1x1-1.png';"
               />
               <h3>
-                <a rel="noreferrer" href="${programa.link_de_descarga}">
+                <a rel="noreferrer" target="_blank" href="${programa.link_de_descarga}>
                   ${programa.nombre}
                 </a>
               </h3>
@@ -116,7 +116,7 @@ import SearchBtn from "./Search-btn.astro";
                 onerror="this.onerror=null; this.src='https://s3.amazonaws.com/www-inside-design/uploads/2020/10/aspect-ratios-blogpost-1x1-1.png';"
               />
               <h3>
-                <a rel="noreferrer" href="${programa.link_de_descarga}">
+                <a rel="noreferrer" target="_blank" href="${programa.link_de_descarga}">
                   ${programa.nombre}
                 </a>
               </h3>
