--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Subir Programa">
   <main id="UploadProgram">
     <h1>Agrega Tus Programas</h1>
-    <a href="/UploadTutorial">Ayuda & Documentación</a>
+    <a target="_blank" href="https://n4chos-organization.gitbook.io/soft-share">Ayuda &  Documentación 📑</a>
     <form id="programForm">
       <div class="input-group">
         <input
@@ -182,8 +182,8 @@ import Layout from "../layouts/Layout.astro";
 
   a {
     position: fixed;
-    top: 1px;
-    left: 1px;
+    top: 0.5rem;
+    left: 0.5rem;
     align-items: center;
     font-size: 1.2rem;
     font-weight: bold;
